# doldaconnect

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  acinclude.m4  bootstrap  configure.in  doldaconnect.spec.in
CVS/: Entries  Repository
autopackage/: .gitignore  Makefile.am  build  dcguile.apspec.in  dcuilib.apspec.in  dolcon.apspec.in  doldacond.apspec.in  guishell.apspec.in  makeall  trapplet.apspec.in
autopackage/@bzip.org/libbz2/: skeleton.1
autopackage/@dolda2000.com/fredrik/doldaconnect/dcuilib/: skeleton.1
autopackage/@dolda2000.com/fredrik/doldaconnect/dolcon/: skeleton.1
autopackage/@dolda2000.com/fredrik/doldaconnect/doldacond/: skeleton.1
autopackage/@gnu.org/gdbm/: skeleton.1
autopackage/@gnu.org/guile/: skeleton.1
autopackage/@mit.edu/krb5/: skeleton.1
autopackage/CVS/: Entries  Repository
clients/: Makefile.am  dolda-icon.xpm  test.c
clients/CVS/: Entries  Repository
clients/gaim/: .gitignore  Makefile.am  gaim-dolcon.c  ginstall  gp-dolcon.c  makeplot  mksrc  pinstall  statcomp
clients/gnome-trans-applet/: .gitignore  Dolcon_Transferapplet_Factory.server.in  Makefile.am  conduit-dclib.c  conduit-pipe.c  conduit.c  conduit.h  dctrmon  dolcon-trans-applet.c
clients/gnome-trans-applet/CVS/: Entries  Repository
clients/gtk2/: .gitignore  Makefile.am  dolcon.c  dolcon.desktop  dolcon.h  emacs-local  findaccels  hublist-old.c  hublist-xml.c  hublist.c  hublist.h  inpdialog.desc  main.c  mainwnd.desc  makegdesc  pref.desc  progressbar.c  progressbar.h  reslist.desc
clients/gtk2/CVS/: Entries  Repository
clients/gui-shell/: .gitignore  Makefile.am  dolcon.desktop  dsh-menu.desc  dsh-start.desc  dsh.c  launch.c
clients/tty/: .gitignore  Makefile.am  dcsh.c
common/: .gitignore  Makefile.am  httest.c  http.c  makegdesc  tiger.c  utils.c
config/: .gitignore  Makefile.am  baseconv.c  dc-filter  dc-filtercmd  dolconf-assistant.desc  dolconf-wnd.desc  dolconf.c  doldacond.conf  speedrec.c  tigersum.c  tthsum.c
config/CVS/: Entries  Repository
config/cmd/: .gitignore  Makefile.am  locktouch.c  tthsum.c
config/util/: .gitignore  Makefile.am  dolconf-assistant.desc  dolconf-wnd.desc  dolconf.c
contrib/: Makefile.am  debian-init.d-doldacond  doldaconnect.spec.in  fedora-init.d-doldacond  gentoo-init.d-doldacond  pam.d-doldacond
daemon/: .gitignore  Makefile.am  auth-krb5.c  auth-pam.c  auth-unix.c  auth.c  auth.h  client.c  client.h  conf.c  conf.h  filenet.c  filenet.h  fnet-adc.c  fnet-dc.c  hmdec.c  log.c  log.h  main.c  module.h  net.c  net.h  protorev  reqstat.c  search.c  search.h  sysevents.h  tiger.c  tiger.h  transfer.c  transfer.h  ui.c  uiretref  utils.c  utils.h
daemon/CVS/: Entries  Repository
debian/: changelog  control  doldacond.install  rules
doc/: INSTALL  INSTALL.applet  INSTALL.gaim  INSTALL.guile  Makefile.am  README.FreeBSD  TODO  builddeps.debian  doldacond.8  doldacond.conf.5.in  gui-shell  mkcvman  protorev  release-checklist  server-address
doc/man/: .gitignore  Makefile.am  dolcon.1  doldacond.8  doldacond.conf.5.in  hubmgr.1  mkcvman
doc/protocol/: .gitignore  Makefile.am  protocol.tex  reqlist.sty
doc/protocol/cmd/: cnct.tex  login.tex  lsauth.tex  pass.tex  quit.tex  shutdown.tex
include/: Makefile.am  http.h  log.h  ucs.h  utils.h
include/CVS/: Entries  Repository
include/doldaconnect/: .gitignore  Makefile.am  uilib.h  uimisc.h  utils.h
include/doldaconnect/CVS/: Entries  Repository  Root
lib/: .gitignore  Makefile.am  initcmds.h  makecmds  uicmds  uilib.c  uilib.h  uimisc.c  utils.c
lib/CVS/: Entries  Repository
lib/guile/: Makefile.am  autodl  chatlog  dcdlser  dcruncmd  dolcon-guile.c  hubmgr
lib/guile/CVS/: Entries  Repository
lib/guile/dolcon/: Makefile.am  ui.scm  util.scm
lib/guile/dolcon/CVS/: Entries  Repository
lib/java/dolda/dolcon/: AuthException.java  Authenticator.java  ClosedException.java  Command.java  ConnectException.java  Connection.java  Hub.java  HubListener.java  HubManager.java  InteractiveAuth.java  NoMechException.java  PasswordAuth.java  ProtocolException.java  Response.java  ResponseException.java  Session.java  Test.java  VersionException.java
lib/java/dolda/dolcon/protocol/: ClosedException.java  Command.java  ConnectException.java  Connection.java  NotifyListener.java  Response.java  VersionException.java
lib/perl/: Makefile.PL  dcui.pm
lib/python/: dolmod.c  setup.py
lib/python/dolcon/: __init__.py
lib/ucs/: Makefile.am  ucs.c
po/: .gitignore  ChangeLog  Makevars  POTFILES.in  sv.po
po/CVS/: Entries  Repository
share/: Makefile.am  dolcon-gtk.desktop  dolcon-shell.desktop
